✨ Finaliza implementação GSAP com animações avançadas
🎯 Funcionalidades Implementadas:
- Sistema GSAP com ScrollTrigger para skills showcase
- Animações laterais suaves com transições completas
- Remoção de elementos UI desnecessários (botões Carreira/Contact)
- Sistema de navegação por scroll e touch otimizado
- Efeitos visuais melhorados e interface mais limpa

🚀 Melhorias Técnicas:
- GSAP instalado e configurado corretamente
- Transições 3D com perspectiva e rotação
- Debouncing inteligente para scroll
- Performance otimizada para mobile e desktop
- Cleanup automático de animações

💎 Design Refinado:
- Interface minimalista focada em skills
- Transições cinematográficas fluidas
- Experiência visual mais profissional
- Responsividade aprimorada

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#1A1A1A" />
-  <meta name="description" content="Andrew Alexeyev - Senior Product Designer Portfolio" />
+  <meta name="description" content="Matheus Website - Full Stack Developer Portfolio" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Andrew Alexeyev - Portfolio</title>
+  <title>Matheus Website - Portfolio</title>
 </head>
 
 <body>
